--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
     background-color: rgba(89, 131, 252, 1);
     background-image: linear-gradient(90deg, rgba(89, 131, 252, 1) 0%, rgba(41, 53, 86, 1) 100%);
     
@@ -26,7 +27,7 @@ body{
     border-radius: 10px;
     padding: 15px 10px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
+    visibility: hidden;
 }
 
 
@@ -40,6 +41,37 @@ body{
     padding: 5px 10px;
     cursor: pointer;
     border-radius: 5px;
+}
+
+
+.menu .share{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.menu .share .share-menu{
+    position: absolute;
+    width: 170px;
+    background-color: #fff;
+    left: 260px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 10px;
+    padding: 10px 5px;
+    visibility: hidden;
+}
+
+
+.menu .share:hover .share-menu{
+    visibility: visible;
+}
+
+
+.menu .share .share-menu li{
+    list-style-type: none;
+    padding: 5px 0;
 }
 
 
