--- a/style.css
+++ b/style.css
@@ -62,13 +62,20 @@ body{
     left: 260px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     border-radius: 10px;
-    padding: 10px 5px;
+    padding: 10px 20px;
     visibility: hidden;
 }
 
 
 .menu .share:hover .share-menu{
     visibility: visible;
+}
+
+
+.menu .share .share-menu li:hover{
+    background-color: #f2f2f2;
+    border-radius: 5px;
+
 }
 
 
